components/soccer/table/row/style.scss
.text-score {
    color: #FF0000;
    font-weight: bold;
}

.text-1H {
    color: #0057FF;
    font-weight: bold;
}

.icon-arrow-right,
.icon-penalty {
    color: #000;
    margin-right: .4rem;
}

[class$="card"] {
    border-radius: .3rem;
    color: #000;
    height: 1.6rem;
    line-height: 1.8rem;
    font-family: 'Roboto', sans-serif;
    font-size: 1.1rem;
    display: inline-block;
    margin: 0 .4rem;
    padding: 0 .4rem;
    text-align: center;
}

.red-card {
    background-color: #FF0000;
}

.yellow-card {
    background-color: #ffd600;
}

.col-home,
.col-away {
    width: 19rem;
}

.mobile {
    td {
        border: .005rem solid #DFDFDF;
        padding: 0.4rem;
    }

    .col-home,
    .col-away {
        width: 10rem;
    }
}

